Bug 1268380 - Part 1: Lower the precedence of SyntaxError next to ConstraintError in IDBObjectStore::CreateIndex(). r=khuey